--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^4.11.3",
+    "@popperjs/core": "^2.6.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,18 +15,29 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "collections": "^5.1.12",
     "hydrated-ws": "^1.2.6",
+    "immutable-sorted": "^0.2.11",
+    "install": "^0.13.0",
+    "npm": "^7.5.3",
+    "re-reselect": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-popper": "^2.2.4",
     "react-scripts": "4.0.2",
+    "reselect": "^4.0.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zingchart": "^2.9.2",
+    "zingchart-react": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "npm run build && npm run serve-built",
+    "serve-built": "serve -s build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +57,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "serve": "^11.3.2",
+    "vercel": "^21.2.3"
+  }
 }
