--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "@material-ui/core": "^4.11.3",
-    "hydrated-ws": "^1.2.6",
-    "immutable-sorted": "^0.2.11",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@emotion/react": "11.1.5",
+    "@emotion/styled": "~11.1.5",
+    "@material-ui/core": "~4.11.3",
+    "hydrated-ws": "~1.2.6",
+    "immutable-sorted": "~0.2.11",
+    "react": "~17.0.1",
+    "react-dom": "~17.0.1",
     "react-scripts": "4.0.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build --profile",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build --profile",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "analyze-build": "source-map-explorer 'build/static/js/*.js'",
     "serve": "npm run build && npm run serve-built",
@@ -49,6 +49,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "csp-html-webpack-plugin": "^5.1.0",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.1.8",
     "serve": "^11.3.2",
     "source-map-explorer": "^2.5.2",
     "vercel": "^21.2.3"
