--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build --profile",
-    "test": "react-app-rewired test",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "analyze-build": "source-map-explorer 'build/static/js/*.js'",
     "serve": "npm run build && npm run serve-built",
@@ -51,6 +51,8 @@
     "@types/react-dom": "^17.0.0",
     "csp-html-webpack-plugin": "^5.1.0",
     "customize-cra": "^1.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "react-app-rewired": "^2.1.8",
     "serve": "^11.3.2",
     "source-map-explorer": "^2.5.2",
